--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
     needs: tags
     uses: ./.github/workflows/Docker.yml
     with:
-      image_name: "N01r4M/fibonacci"
+      image_name: "mpr/fibonacci"
       image_version: "${{ needs.tags.outputs.new_version }}"
       image_build_args: ""
       image_context: .
@@ -56,7 +56,7 @@ jobs:
         run: |
           # https://learn.microsoft.com/en-us/cli/azure/container?view=azure-cli-latest#az-container-create()
           az group create --name mon-resource-group --location northeurope
-          az container create --resource-group mon-resource-group --name fibonacci-mpr --dns-name-label fibonacci-mpr --image docker.io/N01r4M/fibonacci:${{ needs.tags.outputs.new_version }} --ports 8080
+          az container create --resource-group mon-resource-group --name fibonacci-mpr --dns-name-label fibonacci-mpr --image docker.io/mpr/fibonacci:${{ needs.tags.outputs.new_version }} --ports 8080
   build:
     needs: tags
     runs-on: ubuntu-latest
